--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "discord.js-lavalink",
-  "version": "2.2.2",
+  "version": "3.0.0",
   "description": "A discord.js lavalink client",
-  "main": "src/index.js",
-  "types": "typings/index.d.ts",
+  "main": "dist/src/index",
   "scripts": {
-    "test": "eslint src && tslint 'typings/*.ts'",
-    "lint": "eslint --fix src test && tslint --fix 'typings/*.ts'",
+    "prepublishOnly": "yarn compile",
+    "lint": "tslint --fix 'src/**/*.ts'",
+    "test:lint": "tslint 'src/**/*.ts'",
+    "compile": "tsc -p .",
+    "watch": "tsc -p . -w",
     "docs": "node docs.js"
   },
   "repository": {
@@ -19,6 +21,7 @@
     "discord",
     "api",
     "lava",
+    "link",
     "lavalink",
     "lavalink.js",
     "discord.js"
@@ -30,19 +33,19 @@
   },
   "homepage": "https://github.com/MrJacz/discord.js-lavalink#readme",
   "devDependencies": {
-    "@types/node": "^11.9.5",
+    "@types/node": "^11.11.3",
     "@types/ws": "^6.0.1",
     "discord.js": "discordjs/discord.js",
     "docma": "^3.2.2",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "jsdoc-dynamic": "^1.0.4",
-    "tslint": "^5.12.1",
+    "tslint": "^5.14.0",
     "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "ws": "^6.1.4"
+    "ws": "^6.2.0"
   },
   "peerDependencies": {
     "discord.js": "^11.4.2"
