--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
     displayName: 'Install Node.js'
   - script: yarn
     displayName: 'Install Dependencies'
-  - script: yarn run test:lint
+  - script: yarn test:lint
     displayName: 'Run test lint'
     condition: succeededOrFailed()
   - bash: |
@@ -34,7 +34,7 @@ steps:
       TARGET_BRANCH="gh-pages"
       git clone $REPO out -b $TARGET_BRANCH
 
-      yarn run docs
+      yarn docs
 
       rsync -vau docs/ out/
 
