--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublishOnly": "yarn compile",
+    "prepare": "yarn compile",
     "lint": "tslint --fix 'src/**/*.ts'",
     "test": "tslint 'src/**/*.ts'",
     "compile": "tsc -p .",
@@ -34,19 +34,19 @@
   },
   "homepage": "https://github.com/MrJacz/discord.js-lavalink#readme",
   "devDependencies": {
-    "@types/node": "^11.11.7",
+    "@types/node": "^11.12.2",
     "@types/ws": "^6.0.1",
     "discord.js": "discordjs/discord.js",
     "docma": "^3.2.2",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "jsdoc-dynamic": "^1.0.4",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.4.1"
   },
   "dependencies": {
-    "ws": "^6.2.0"
+    "ws": "^6.2.1"
   },
   "peerDependencies": {
     "discord.js": "^11.4.2"
