--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepack": "yarn compile",
+    "prepublishOnly": "yarn compile",
     "lint": "tslint --fix 'src/**/*.ts'",
     "test": "tslint 'src/**/*.ts'",
     "compile": "tsc -p .",
