--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "yarn compile",
-    "lint": "tslint --fix 'src/**/*.ts'",
-    "test": "tslint 'src/**/*.ts'",
+    "lint": "eslint --fix --ext ts src",
+    "test": "eslint --ext ts src",
     "compile": "tsc -p .",
     "watch": "tsc -p . -w",
     "docs": "node docs.js"
@@ -34,20 +34,21 @@
   },
   "homepage": "https://github.com/MrJacz/discord.js-lavalink#readme",
   "devDependencies": {
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.8",
     "@types/ws": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "discord.js": "discordjs/discord.js",
     "eslint": "^5.16.0",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "jsdoc-dynamic": "^1.0.4",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.2"
   },
   "dependencies": {
     "ws": "^7.0.0"
   },
   "peerDependencies": {
-    "discord.js": "^11.5.0"
+    "discord.js": "^11.5.1"
   }
 }
