--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,31 @@
 {
 	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
 		"alwaysStrict": true,
 		"declaration": true,
-		"esModuleInterop": false,
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"forceConsistentCasingInFileNames": true,
-		"lib": ["esnext"],
+		"strict": true,
+		"incremental": true,
+		"lib": [
+			"esnext",
+			"esnext.array",
+			"esnext.asynciterable",
+			"esnext.intl",
+			"esnext.symbol"
+		],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"newLine": "LF",
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": true,
 		"outDir": "./dist",
 		"pretty": true,
 		"removeComments": true,
 		"resolveJsonModule": true,
 		"sourceMap": true,
+		"strictFunctionTypes": true,
 		"strictBindCallApply": true,
-        "target": "esnext",
-        "types": ["@types/node", "@types/ws", "discord.js"]
+		"target": "esnext",
+		"types": ["node"]
 	},
 	"exclude": [
 		"node_modules",
